@startuml
class com.example.cartehab.activity.NewRoomActivity {
# Piece p
# Mur m
# Habitation h
# ArrayList<Button> listeButtonPorte
# float degree
# ImageView wall
# ConstraintLayout layout
# long lastUpdateTime
# TextView orientation
# SensorManager sensorManager
# Sensor sensorAccelerometer
# Sensor sensorMagnetic
- float[] accelerometerData
- float[] magnetometerData
- float[] rotationMatrix
- float[] orientationAngles
~ ActivityResultLauncher<Intent> launcherSelectDoor
~ ActivityResultLauncher<Intent> launcher
# void onCreate(Bundle)
+ void onSensorChanged(SensorEvent)
+ void onAccuracyChanged(Sensor,int)
+ String orientation()
+ void set3D()
+ void afficherMur(Mur)
+ void onBackPressed()
# void onPause()
# void onResume()
+ void finish()
}
class com.example.cartehab.activity.ConstructionActivity {
# Habitation hab
# ArrayList<String> listeHabitation
# TextView nameHab
# String nomLastHab
~ ActivityResultLauncher<Intent> launcherNewRoom
~ ActivityResultLauncher<Intent> launcherModificationRoom
# void onCreate(Bundle)
+ void saveListeHabitation(int)
+ String openListeHabitation()
# void newHabitation()
# AlertDialog alertOpenHabitation()
+ void supprimerHabitationEtOuvrirDerniereHabitation()
+ boolean onCreateOptionsMenu(Menu)
+ boolean onOptionsItemSelected(MenuItem)
# void onPause()
+ void onBackPressed()
+ void finish()
}
class com.example.cartehab.activity.VisualisationActivity {
# Piece p
# ArrayList<String> listeHabitation
# TextView roomName
# Habitation h
# ArrayList<Button> listeButtonPorte
# ImageView wall
# ConstraintLayout layout
# TextView orientation
- String orientationMur
# Button droit
# Button gauche
- String[] ptCardinaux
- int i
# ImageButton goToButton
# boolean gpsActif
# Piece pieceFinale
# TextView instructions
# void onCreate(Bundle)
# void goDroite()
# void goGauche()
# void gpsInstruction()
# AlertDialog alertOpenHabitation()
+ void set3D()
+ void afficherMur(Mur)
}
class com.example.cartehab.activity.SelectDoorActivity {
# ImageView im
# Rect rectangle
# SurfaceHolder holder
# SurfaceView surface
# Canvas canvas
# int left
# int xIm
# ArrayList<Rect> listePorte
# Mur m
# Habitation hab
# String pieceSuivanteNom
# void onCreate(Bundle)
+ void finish()
}
class com.example.cartehab.activity.MainActivity {
# ArrayList<String> listeHabitation
# void onCreate(Bundle)
+ void openListeHabitation()
# void onResume()
}
class com.example.cartehab.activity.ModificationRoomActivity {
# Habitation hab
# Piece piece
# Mur m
# ArrayList<Button> listeButtonPorte
# float degree
# ImageView wall
# ConstraintLayout layout
# long lastUpdateTime
# SensorManager sensorManager
# TextView roomName
- boolean dialogDismiss
# TextView orientation
# Button modification
# ImageButton attention
# boolean pieceASuppr
# Sensor sensorAccelerometer
# Sensor sensorMagnetic
- float[] accelerometerData
- float[] magnetometerData
- float[] rotationMatrix
- float[] orientationAngles
~ ActivityResultLauncher<Intent> launcherSelectDoor
~ ActivityResultLauncher<Intent> launcher
# void onCreate(Bundle)
- void setPiece(Piece)
+ void onAccuracyChanged(Sensor,int)
+ void onSensorChanged(SensorEvent)
+ String orientation()
+ void set3D()
+ void afficherMur(Mur)
+ boolean onCreateOptionsMenu(Menu)
+ boolean onOptionsItemSelected(MenuItem)
+ void onBackPressed()
# void onPause()
# void onResume()
+ void finish()
}


android.hardware.SensorEventListener <|.. com.example.cartehab.activity.NewRoomActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.cartehab.activity.NewRoomActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.cartehab.activity.ConstructionActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.cartehab.activity.VisualisationActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.cartehab.activity.SelectDoorActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.cartehab.activity.MainActivity
android.hardware.SensorEventListener <|.. com.example.cartehab.activity.ModificationRoomActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.cartehab.activity.ModificationRoomActivity
@enduml